--- a/index.html
+++ b/index.html
@@ -1,47 +1,176 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title> Harsh Bhatt</title>
-	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="font-awesome/css/font-awesome.min.css">
-	<link rel="stylesheet" type="text/css" href="css/style.css">
-</head>
-<body>
-<nav class="navbar navbar-inverse">
-<div class="container-fluid">
-<div class="navbar-header">
-<button class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navoptions" aria-expanded="false">
-	<span class="sr-only">Toggle navigation</span>
-    <span class="icon-bar"></span>
-    <span class="icon-bar"></span>
-    <span class="icon-bar"></span>
-
-</button>
-<a class="navbar-brand" href="#profile"> Harsh Bhatt</a>
-	</div>	
-	<div class="collapse navbar-collapse" id="navoptions">
-		<ul class="nav navbar-nav navbar-right">
-		<li>
-			<a href="#portfolio">
-				<i class="fa fa-briefcase fa-fw" aria-hidden="true"></i>
-				&nbsp;Portfolio
-			</a>
-		</li>
-			<li> <a href="#profile">
-			<i class="fa fa-user-circle fa-fw" aria-hidden="true"></i>
-			&nbsp;Profile
-			</a></li>
-			<li> <a href="#contact">
-			<i class="fa fa-address-book fa-fw" aria-hidden="true"></i>
-			&nbsp;Contact
-			</a></li>
-		</ul>
-	</div>
-</div>	
-</nav>
-<script type="text/javascript" src="js/jquery.min.js"></script>
-<script type="text/javascript" src="js/bootstrap.min.js"></script>
-<script type="text/javascript" src="js/scripts.js"></script>
-</body>
+	<head>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<title>Harsh Bhatt</title>
+		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+		<link rel="stylesheet" type="text/css" href="font-awesome/css/font-awesome.min.css">
+		<link rel="stylesheet" type="text/css" href="css/style.css">
+	</head>
+	<body>
+		<nav class="navbar navbar-inverse">
+			<div class="container-fluid">
+				<div class="navbar-header">
+					<button class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navoptions" aria-expanded="false">
+						<span class="sr-only">Toggle navigation</span>
+						<span class="icon-bar"></span>
+	                    <span class="icon-bar"></span>
+	                    <span class="icon-bar"></span>
+					</button>
+					<a class="navbar-brand" href="#profile"> Harsh Bhatt </a>
+				</div>
+				<div class="collapse navbar-collapse" id="navoptions">
+					<ul class="nav navbar-nav navbar-right">
+						<li>
+							<a href="#portfolio"> 
+								<i class="fa fa-briefcase fa-fw" aria-hidden="true"></i>
+								&nbsp;Portfolio
+							</a> 
+						</li>
+						<li> 
+							<a href="#profile"> 
+								<i class="fa fa-user-circle fa-fw" aria-hidden="true"></i>
+								&nbsp;Profile
+							</a> 
+						</li>
+						<li> 
+							<a href="#contact">
+								<i class="fa fa-address-book fa-fw" aria-hidden="true"></i> 
+								&nbsp;Contact
+							</a>
+						</li>
+					</ul>
+				</div>
+			</div> 
+		</nav>
+		<div id="portfolio" class="carousel slide" data-ride="carousel" data-invertal="2000">
+		<ol class="carousel-indicators">
+		    <li data-target="#portfolio" data-slide-to="0" class="active"></li>
+			<li data-target="#portfolio" data-slide-to="1"></li>
+			<li data-target="#portfolio" data-slide-to="2"></li>
+		</ol>
+		<div class="carousel-inner " role="listbox">
+        <div class="item active">
+        	<img src="images/hcb.jpg" alt="HTML, CSS & Bootstrap">
+        </div>
+        <div class="item">
+        	<img src="images/iot.jpg" alt="Internet Of Things">
+        </div>
+        <div class="item">
+        	<img src="images/git.jpg" alt="Git & Github">
+        </div>
+		</div>
+		<a href="#portfolio" role="button" class="left carousel-control" data-slide="prev">
+			<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"> </span>
+			<span class="sr-only"> Previous </span>
+		</a>
+		<a href="#portfolio" role="button" class="right carousel-control" data-slide="next">
+			<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"> </span>
+			<span class="sr-only"> Next </span>
+		</a>
+		  </div>
+		  <div id="profile" class="container-fluid bg-profile">
+		  	<div class="cover-profile">
+		  		<img align="left" class="cover-image img-rounded" src="images/cover.png" alt="Profile cover image"/>
+		  		<img align="left" class="cover-profile-image thumblnail" src="images/harshb.jpg" alt="Profile image"/>
+		  		<div class="cover-profile-text">
+		  			<h1>Harsh Bhatt</h1>
+		  			<h3>Web Developer - HTML5, CSS3 & Bootstrap</h3>
+		  			<ul class="nav nav-pills" role="tablist">
+		  				<li role="presentation" class="active">
+		  				<a href="#personal" aria-controls="home" role="tba" data-toggle="pill">
+		  					Presonal Info
+		  				</a> </li>
+		  				<li role="presentation">
+		  				<a href="#professional" aria-controls="profile" role="tab" data-toggle="pill">
+		  					Professional Info
+		  				</a> </li>
+		  			</ul>
+		  			<div class="tab-content mt-20">
+		  				<div role="tabpanel" class="tab-pane active" id="personal">
+		  				<p> I am Harsh Bhatt,study in Parevartan school in 10th standard. I am 14 years old and live in Ghaziabad. I live with my parents. My father Mr. Mahesh Chandra Bhatt is a Sr. Engenieer and my mother Mrs. Bhawana Bhatt is housewife. I am a fun loving person who likes to play football and my passionate is to become a Doctor</p> </div>
+		  				<div role="tabpanel" class="tab-pane" id="professional"> 
+		  				<p> I Harsh Bhatt is in class 10is working on technologirs such as HTML, CSS , Bootstrap &IOT. My initial work was started at Smartpathshala with the help of Smartpathshala an inititave by Knight Learning Solutions Pvt. Ltd. I have developed and designed a responsive website with complete understanding different elements. I can develop different websites using same skills. </p>
+		  			</div>
+		  		</div>
+		  	</div>
+		  </div>
+		  <div id="contact" class="container-fluid">
+		  	<div class="row bg-contact">
+		  		<div class="col-md-6">
+		  			<div class="contact mt-20 mb-20">
+		  				<form class="form-horizontal">
+		  					<div class="text-center header"> Send your message here</div>
+		  					<div class="form-group">
+		  						<span class="col-md-1 col-md-offset-1 text-center">
+		  							<i class="fa fa-user formicon"></i>
+		  						</span>
+		  						<div class="col-md-8">
+		  							<input type="text" name="name" class="form-control" placeholder="Enter your name">
+		  						</div>
+		  					</div>
+		  					<div class="form-group">
+		  						<span class="col-md-1 col-md-offset-1 text-center">
+		  							<i class="fa fa-envelope formicon"></i>
+		  						</span>
+		  						<div class="col-md-8">
+		  							<input type="text" name="email" class="form-control" placeholder="Enter your email">
+		  						</div>
+		  					</div>
+		  					<div class="form-group">
+		  						<span class="col-md-1 col-md-offset-1 text-center">
+		  							<i class="fa fa-phone formicon"></i>
+		  						</span>
+		  						<div class="col-md-8">
+		  							<input type="text" name="phone" class="form-control" placeholder="Enter your phone number">
+		  						</div>
+		  					</div>
+		  					<div class="form-group">
+		  						<span class="col-md-1 col-md-offset-1 text-center"> <i class="fa fa-question formicon"></i></span>
+		  						<div class="col-md-8">
+		  						    <textarea name="message" class="form-control" placeholder="Enter your message for us here." rows="2"></textarea>
+		  						</div>
+		  					</div>
+		  					<div class="form-group">
+		  						<div class="col-md-12 text-center">
+		  							<button type="submit" class="btn-success btn-lg"> Submit</button>
+		  						</div>
+		  					</div>
+		  				</form>
+		  			</div>
+		  		</div>
+		  		<div class="col-md-6">
+		  			<div class="contact mt-20 mb-20">
+		  				<div class="text-center header"> My address</div>
+		  				<div class="text-center address-text">
+		  					A-1104 Greenview Heights, Rajnagar Ext. <br>
+		  					Ghaziabad, <br>
+		  					U.P ,201002<br>
+		  					parevartan.harshb@gmail.com<br>
+		  					<hr>
+		  					<div class="map">
+		  						<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3499.523508097348!2d77.41136131457134!3d28.703896982389633!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390cf0e5f2761207%3A0x24fa746fcf196de0!2sParevartan+School!5e0!3m2!1sen!2sin!4v1493959657484" frameborder="0" allowfullscreen></iframe>
+		  					</div>
+		  				</div>
+		  			</div>
+		  		</div>
+		  	</div>
+		  </div>
+		  <footer>
+		  	<div class="container-fluid">
+		  		<div class="row">
+		  			<div class="col-xs-12 col-md-6 text-center"> Cpoyright &copy; Harsh Bhatt 2017</div>
+		  			<div class="col-xs-12 col-md-6 text-center">
+		  				<a href="#"><i class="fa fa-facebook socialicon"></i></a>
+		  				<a href="#"><i class="fa fa-twitter socoalicon"></i></a>
+		  				<a href="#"><i class="fa fa-linkedin socialicon"></i></a>
+		  				<a href="#"><i class="fa fa-github socialicon"></i></a>
+		  			</div>
+		  		</div>
+		  	</div>
+		  </footer>
+		<script type="text/javascript" src="js/jquery.min.js"></script>
+		<script type="text/javascript" src="js/bootstrap.min.js"></script>
+		<script type="text/javascript" src="js/scripts.js"></script>
+	</body>
 </html>
