--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
 		</ol>
 		<div class="carousel-inner " role="listbox">
         <div class="item active">
-        	<img src="images/hcb.jpg" alt="HTML, CSS & Bootstrap">
+        	<img src="images/bg3.jpg" alt="HTML, CSS & Bootstrap">
         </div>
         <div class="item">
-        	<img src="images/iot.jpg" alt="Internet Of Things">
+        	<img src="images/bg4.jpg" alt="Internet Of Things">
         </div>
         <div class="item">
-        	<img src="images/git.jpg" alt="Git & Github">
+        	<img src="images/bg5.jpg" alt="Git & Github">
         </div>
 		</div>
 		<a href="#portfolio" role="button" class="left carousel-control" data-slide="prev">
@@ -71,7 +71,7 @@
 		  </div>
 		  <div id="profile" class="container-fluid bg-profile">
 		  	<div class="cover-profile">
-		  		<img align="left" class="cover-image img-rounded" src="images/cover.png" alt="Profile cover image"/>
+		  		<img align="left" class="cover-image img-rounded" src="images/bg555.jpg" alt="Profile cover image"/>
 		  		<img align="left" class="cover-profile-image thumblnail" src="images/harshb.jpg" alt="Profile image"/>
 		  		<div class="cover-profile-text">
 		  			<h1>Harsh Bhatt</h1>
@@ -90,7 +90,7 @@
 		  				<div role="tabpanel" class="tab-pane active" id="personal">
 		  				<p> I am Harsh Bhatt,study in Parevartan school in 10th standard. I am 14 years old and live in Ghaziabad. I live with my parents. My father Mr. Mahesh Chandra Bhatt is a Sr. Engenieer and my mother Mrs. Bhawana Bhatt is housewife. I am a fun loving person who likes to play football and my passionate is to become a Doctor</p> </div>
 		  				<div role="tabpanel" class="tab-pane" id="professional"> 
-		  				<p> I Harsh Bhatt is in class 10is working on technologirs such as HTML, CSS , Bootstrap &IOT. My initial work was started at Smartpathshala with the help of Smartpathshala an inititave by Knight Learning Solutions Pvt. Ltd. I have developed and designed a responsive website with complete understanding different elements. I can develop different websites using same skills. </p>
+		  				<p> I Harsh Bhatt is in class 10is working on technologies such as HTML, CSS , Bootstrap &IOT. My initial work was started at Smartpathshala with the help of Smartpathshala an inititave by Knight Learning Solutions Pvt. Ltd. I have developed and designed a responsive website with complete understanding different elements. I can develop different websites using same skills. </p>
 		  			</div>
 		  		</div>
 		  	</div>
