updated in index.html

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 		  				<div role="tabpanel" class="tab-pane active" id="personal">
 		  				<p> I am Harsh Bhatt,study in Parevartan school in 10th standard. I am 14 years old and live in Ghaziabad. I live with my parents. My father Mr. Mahesh Chandra Bhatt is a Sr. Engenieer and my mother Mrs. Bhawana Bhatt is housewife. I am a fun loving person who likes to play football and my passionate is to become a Doctor</p> </div>
 		  				<div role="tabpanel" class="tab-pane" id="professional"> 
-		  				<p> I Harsh Bhatt is in class 10is working on technologies such as HTML, CSS , Bootstrap &IOT. My initial work was started at Smartpathshala with the help of Smartpathshala an inititave by Knight Learning Solutions Pvt. Ltd. I have developed and designed a responsive website with complete understanding different elements. I can develop different websites using same skills. </p>
+		  				<p> I Harsh Bhatt is in class 10is working on technologies such as HTML, CSS , Bootstrap &IOT. My initial work was started at Parevartan with the help of Smartpathshala an inititave by Knight Learning Solutions Pvt. Ltd. I have developed and designed a responsive website with complete understanding different elements. I can develop different websites using same skills. </p>
 		  			</div>
 		  		</div>
 		  	</div>
